--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 :root {
+  --shelf-color: #493026;
+  --book-color: #e0ab81;
+  --background-color: #ecded1;
+  --text-color: #493026;
 }
 
 * {
@@ -9,76 +13,59 @@
 
 body {
   font-family: Arial, sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 .container {
   display: grid;
   place-items: center;
   padding: 2rem;
+  gap: 2rem;
 }
 
-/* --- */
+header {
+  text-align: center;
+  margin-bottom: 2rem;
+  display: grid;
+  gap: 1rem;
+}
 
 #shelf-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .shelf {
-  border: 1px solid #000;
-  padding: 10px;
-  margin: 10px;
   display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.shelf::before {
+  content: '';
+  width: 100%;
+  height: 1rem;
+  background-color: var(--shelf-color);
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+}
+
+.book-container {
+  display: flex;
+  gap: 2px;
 }
 
 .book {
   width: 20px;
   height: 100px;
-  margin: 2px;
-  background-color: #f0f0f0;
-  position: relative;
+  margin-right: 2px;
+  background-color: var(--book-color);
+  margin-bottom: 1rem;
 }
 
 .book:hover {
   transform: scale(1.1);
-}
-
-.book.active {
-  background-color: #ccc;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-.close-button {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close-button:hover,
-.close-button:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
