--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ body {
 }
 
 header {
+  display: grid;
+  place-items: center;
   text-align: center;
   margin-bottom: 2rem;
-  display: grid;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 #shelf-container {
